# oyhub

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: hermes-agent-design-patterns.md
observability/: prometheus.yml
observability/grafana/provisioning/dashboards/: oyhub.json  provider.yml
oyhub/: __init__.py  __main__.py  config.py  curator.py  dashboard.py  guard.py  locks.py  memory.py  server.py  skills.py  telemetry.py
prototypes/loopforge/: README.md
prototypes/loopforge/loopforge/: __init__.py  __main__.py  config.py  critic.py  engine.py  harness.py  llm.py  vault.py
prototypes/loopforge/tests/: test_loopforge.py
scripts/: demo_traffic.py
tests/: test_oyhub.py
