[project]
name = "oyhub"
version = "0.2.0"
description = "Local agent harness: central skill library, Obsidian + SQLite FTS5 memory, background curator — served over MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akan Abdireshov", email = "asanovich.02@gmail.com" }]
keywords = ["mcp", "agent", "memory", "obsidian", "claude", "skills", "harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Asanovichoff/oyhub"
Repository = "https://github.com/Asanovichoff/oyhub"
Issues = "https://github.com/Asanovichoff/oyhub/issues"

[project.scripts]
oyhub = "oyhub.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oyhub*"]

[tool.ruff]
line-length = 100
